--- a/app/blueprints/blog/author.yaml
+++ b/app/blueprints/blog/author.yaml
@@ -1,34 +1,22 @@
-uuid: 6947ff28-b660-47d7-9240-24ca6d58aeae
+uuid: 229b2337-2198-425b-8e12-38c8f9327791
 handle: Blog\Author
 type: entry
 name: Author
 drafts: false
 
-customMessages:
-    buttonCreate: New Author
-
 navigation:
-    label: Authors
     parent: Blog\Post
-    icon: octo-icon-user
-    order: 200
+    icon: icon-user
+    order: 10
 
 fields:
+    role:
+        label: Role
+        type: text
+    about:
+        label: About
+        type: textarea
     avatar:
         label: Avatar
         type: mediafinder
         mode: image
-
-    role:
-        label: Role
-        type: text
-
-    about:
-        label: About
-        type: textarea
-
-    _social_links:
-        type: mixin
-        label: Social Links
-        source: Fields\SocialLinks
-        tab: Social
