--- a/app/blueprints/blog/post.yaml
+++ b/app/blueprints/blog/post.yaml
@@ -1,46 +1,49 @@
-uuid: edcd102e-0525-4e4d-b07e-633ae6c18db6
+uuid: 175f598e-9a3d-4581-8543-41d2cfc6415b
 handle: Blog\Post
 type: stream
 name: Post
 drafts: true
 
-customMessages:
-    buttonCreate: New Post
-
 primaryNavigation:
     label: Blog
-    icon: octo-icon-file
-    iconSvg: modules/tailor/assets/images/blog-icon.svg
-    order: 95
+    icon: icon-file
+    order: 130
 
 navigation:
-    label: Posts
-    icon: octo-icon-pencil
-    order: 100
+    icon: icon-bookmark
+    parent: Blog\Post
+    order: 10
 
-groups:
-    regular_post:
-        name: Regular Post
-        fields:
-            content:
-                tab: Edit
-                label: Content
-                type: richeditor
-                span: adaptive
+fields:
+    content:
+        tab: Edit
+        label: Content
+        type: richeditor
+        span: adaptive
 
-            _blog_post_content:
-                type: mixin
-                source: Fields\BlogContent
+    featured_text:
+        tab: Manage
+        label: Featured Text
+        type: textarea
+        span: row
 
-    markdown_post:
-        name: Markdown Post
-        fields:
-            content:
-                tab: Edit
-                label: Content
-                type: markdown
-                span: adaptive
+    banner:
+        tab: Manage
+        label: Banner
+        type: fileupload
+        mode: image
+        maxFiles: 1
 
-            _blog_post_content:
-                type: mixin
-                source: Fields\BlogContent
+    categories:
+        tab: Manage
+        label: Categories
+        commentAbove: 'Select categories the blog post belongs to'
+        type: entries
+        source: Blog\Category
+    author:
+        tab: Manage
+        label: Author
+        commentAbove: 'Select the author for this blog post'
+        type: entries
+        maxItems: 1
+        source: Blog\Author
