--- a/app/blueprints/catalog/category.yaml
+++ b/app/blueprints/catalog/category.yaml
@@ -1,15 +1,15 @@
 uuid: f7e9a9b1-5da3-42c6-b322-60d8e36bb48c
-handle: Products\Category
+handle: Catalog\Category
 type: structure
-name: Product Category
+name: Category
 drafts: false
 
 structure:
     maxDepth: 3
 
 navigation:
-    icon: icon-hand-spock-o
-    parent: Products\Product
+    icon: icon-tags
+    parent: Catalog\Product
     order: 10
 
 fields:
