--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         "php": "^8.0.2",
         "october/rain": "^3.6",
         "laravel/framework": "^9.0",
-        "october/all": "^3.6",
-        "lovata/shopaholic-plugin": "^1.32"
+        "october/all": "^3.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5|^9.0"
