--- a/app/blueprints/catalog/category.yaml
+++ b/app/blueprints/catalog/category.yaml
@@ -1,15 +1,12 @@
 uuid: f7e9a9b1-5da3-42c6-b322-60d8e36bb48c
 handle: Catalog\Category
-type: structure
+type: entry
 name: Category
 drafts: false
 
-structure:
-    maxDepth: 3
-
 navigation:
-    icon: icon-tags
     parent: Catalog\Product
+    icon: icon-tags
     order: 10
 
 fields:
