--- a/plugins/rbm/stripe/updates/version.yaml
+++ b/plugins/rbm/stripe/updates/version.yaml
@@ -8,3 +8,6 @@ v1.0.3:
 v1.0.3.5:
     - Needed to fix issues with migration
     - create_configs_table.php
+v1.0.4:
+    - Created new components for form
+    - create_configs_table.php
