--- a/plugins/rbm/stripe/updates/version.yaml
+++ b/plugins/rbm/stripe/updates/version.yaml
@@ -11,3 +11,9 @@ v1.0.3.5:
 v1.0.4:
     - Created new components for form
     - create_configs_table.php
+v1.0.5:
+    - Updated the table columns
+    - create_configs_table.php
+v1.0.5.5:
+    - Fixed issues with updated_at
+    - create_configs_table.php
