fixing plugin for development

--- a/plugins/rbm/stripe/updates/version.yaml
+++ b/plugins/rbm/stripe/updates/version.yaml
@@ -17,3 +17,6 @@ v1.0.5:
 v1.0.5.5:
     - Fixed issues with updated_at
     - create_configs_table.php
+v1.0.6:
+    - changed length of main column
+    - create_configs_table.php
