--- a/plugins/rbm/stripe/updates/version.yaml
+++ b/plugins/rbm/stripe/updates/version.yaml
@@ -23,3 +23,6 @@ v1.0.6:
 v1.0.6.1:
     - changed length of main column
     - create_configs_table.php
+v1.0.6.2:
+    - added new navigation page for backend
+    - create_configs_table.php
